--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        room_version = '2.4.0'
+        hilt_version = '2.40.5'
+        truth_version = '1.1.3'
+        moshi_version = '1.12.0'
+        coil_version = '1.4.0'
+        detekt_version = '1.19.0'
+        kotlin_version = '1.5.31'
+        billing_version = '4.0.0'
+        compose_version = '1.0.5'
+        accompanist_version = '0.20.2'
     }
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.4"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detekt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
