--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,8 @@ android {
 advancedVersioning.renameOutputApk()
 
 dependencies {
+    // YASAN Development Kit
+    implementation(project(':ydk:library'))
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
