--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -7,8 +7,7 @@ name: Mark stale issues and pull requests
 
 on:
   schedule:
-  - cron: '* * * * *'
-  workflow_dispatch:
+  - cron: '30 20 * * *'
 
 jobs:
   stale:
