--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,15 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Root
+      uses: actions/checkout@v2
+    - name: Checkout submodules
+      shell: bash
+      run: |
+       git config --global url."https://github.com/".insteadOf "git@github.com:"
+       auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+       git submodule sync --recursive
+       git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
     - uses: actions/setup-java@v2
       with:
         distribution: temurin
