--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,5 @@
 name: Run Gradle on PRs
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+on: pull_request
 jobs:
   gradle:
     strategy:
@@ -14,6 +9,7 @@ jobs:
     steps:
     - name: Checkout Root
       uses: actions/checkout@v2
+
     - name: Checkout submodules
       shell: bash
       run: |
@@ -21,6 +17,7 @@ jobs:
        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
        git submodule sync --recursive
        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+
     - uses: actions/setup-java@v2
       with:
         distribution: temurin
