Update build types

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,12 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable true
+        }
+        staging {
+            initWith debug
+        }
     }
 
     flavorDimensions 'store'
