--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,8 @@ android {
         def appVersionName = advancedVersioning.versionName
         def appVersionCode = advancedVersioning.versionCode
 
-        versionCode appVersionCode
+        // Replace with `appVersionCode` once git count is higher than the current build code
+        versionCode 210
         versionName appVersionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
