Revert "Bump version code to 210"
This reverts commit 0237dee3437432c39e866304c4757ee5879f28f9.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,7 @@ android {
         def appVersionName = advancedVersioning.versionName
         def appVersionCode = advancedVersioning.versionCode
 
-        // Replace with `appVersionCode` once git count is higher than the current build code
-        versionCode 210
+        versionCode appVersionCode
         versionName appVersionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
