--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         kotlin_version = '1.6.10'
         compose_version = '1.1.0'
         accompanist_version = '0.23.0'
+        lifecycle_version = '2.4.1'
     }
     repositories {
         google()
