--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,3 +167,10 @@ dependencies {
     implementation 'com.github.samanzamani:PersianDate:1.3.4'
 
 }
+
+ruler {
+    abi.set("arm64-v8a")
+    locale.set("en")
+    screenDensity.set(480)
+    sdkVersion.set(27)
+}
