Run check instead of build on ci

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,5 +38,5 @@ jobs:
     - name: Make Gradle executable
       run: chmod +x ./gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Gradlew Check
+      run: ./gradlew check
