--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,8 @@ ruler {
     locale.set("en")
     screenDensity.set(480)
     sdkVersion.set(27)
+    ownershipFile.set(project.layout.projectDirectory.file("ownership.yaml"))
+    defaultOwner.set("third-party")
 }
 
 tasks.named("check").configure {
