--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 jobs:
   gradle:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - name: Checkout Root
       uses: actions/checkout@v2
@@ -38,8 +38,14 @@ jobs:
     - name: Make Gradle executable
       run: chmod +x ./gradlew
 
-    - name: Gradlew Check
+    - name: Gradle Check
       run: ./gradlew check
+
+    - name: Gradle Connected Check
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 30
+        script: ./gradlew connectedCheck
 
     - name: Upload Ruler Reports
       uses: actions/upload-artifact@v2
