--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,16 +94,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Reflection
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-
-    // Truth
-    testImplementation "com.google.truth:truth:$truth_version"
-    androidTestImplementation "com.google.truth:truth:$truth_version"
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -147,6 +140,28 @@ dependencies {
 
     // Persian Date
     implementation 'com.github.samanzamani:PersianDate:1.3.4'
+
+    // Local Unit Tests
+    implementation "androidx.test:core:1.4.0"
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.7.3"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "com.google.truth:truth:$truth_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+
+    // Instrumented Unit Tests
+    androidTestImplementation "junit:junit:$junit_version"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$mockito_version"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "com.google.truth:truth:$truth_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 }
 
