--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,13 @@ android {
             useSupportLibrary true
         }
 
-        kapt {
-            arguments {
-                arg("room.schemaLocation", "$projectDir/schemas")
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
             }
         }
+
     }
 
     buildTypes {
