Revert "Run ci on main & telemetry pushes"
This reverts commit 4588a2fcd4e51414dadf86d6dd417f19d177e3f9.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,7 +1,7 @@
 name: Android CI
 on:   
   push:
-    branches: [ main, telemetry ]
+    branches: [ main ]
   pull_request:
     branches: [ '*' ]
   workflow_dispatch:
