--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,7 +1,7 @@
 name: Android CI
 on:   
   push:
-    branches: [ main ]
+    branches: [ main, telemetry ]
   pull_request:
     branches: [ '*' ]
   workflow_dispatch:
