--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.yasan.metro.tehran">
 
+    <uses-feature android:name="android.software.leanback" android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
+
     <application
         android:name=".ApplicationClass"
         android:allowBackup="true"
@@ -9,7 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_tehro_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tehro">
+        android:theme="@style/Theme.Tehro"
+        android:banner="@mipmap/ic_banner">
+
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
@@ -17,7 +22,7 @@
             android:theme="@style/Theme.Tehro.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
