--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
 
     <application
-        android:name=".ApplicationClass"
+        android:name=".presentation.ApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_tehro_launcher"
         android:label="@string/app_name"
