Add location related dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,10 @@ dependencies {
     // Persian Date
     implementation 'com.github.samanzamani:PersianDate:1.3.4'
 
+    // Location
+    implementation 'com.github.BirjuVachhani:locus-android:4.1.0'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+
     // Local Unit Tests
     implementation "androidx.test:core:1.4.0"
     testImplementation "junit:junit:$junit_version"
