--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,48 +1,97 @@
 name: Android CI
-on:   
+
+on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ '*' ]
   workflow_dispatch:
+
 jobs:
-  gradle:
+  unit_tests:
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+
+      - name: Cache Gradle and Wrapper
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Unit tests
+        run: ./gradlew test
+
+  android_tests:
+    runs-on: [ macos-latest ]
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+
+      - name: Cache Gradle and Wrapper
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: ./gradlew connectedAndroidTest
+
+  build:
+    needs: [ unit_tests, android_tests ]
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Root
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Checkout Submodules
-      shell: bash
-      run: |
-       git config --global url."https://github.com/".insteadOf "git@github.com:"
-       auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-       git submodule sync --recursive
-       git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
 
-    - uses: actions/setup-java@v2
-      with:
-        distribution: temurin
-        java-version: 11
-  
-    - name: Cache Gradle and Wrapper
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
 
-    - name: Make Gradle executable
-      run: chmod +x ./gradlew
+      - name: Cache Gradle and Wrapper
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-    - name: Gradlew Check
-      run: ./gradlew check
+      - name: Generate Debug APK
+        run: ./gradlew assembleDebug
 
-    - name: Upload Ruler Reports
-      uses: actions/upload-artifact@v2
-      with:
-        name: ruler-report
-        path: app/build/reports/ruler/*/report.html
+      - name: Upload APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: app/build/outputs/apk/debug/app-debug.apk
