--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,7 +62,7 @@ jobs:
           api-level: 29
           script: ./gradlew connectedAndroidTest
 
-  build:
+  assemble_debug:
     needs: [ unit_tests, android_tests ]
     runs-on: ubuntu-latest
     steps:
@@ -87,11 +87,45 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Generate Debug APK
+      - name: Generate APK
         run: ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3.1.0
         with:
-          name: apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: apk-debug
+          path: app/build/outputs/apk/*/debug/*.apk
+
+  assemble_release:
+    needs: [ unit_tests, android_tests ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+
+      - name: Cache Gradle and Wrapper
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Generate APK
+        run: ./gradlew assembleRelease
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v3.1.0
+        with:
+          name: apk-release
+          path: app/build/outputs/apk/*/release/*.apk
