--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "dev.yasan.metro"
         minSdk 21
-        targetSdk 31
+        targetSdk 32
 
         versionCode 233
         versionName "2.3.3"
@@ -74,7 +74,7 @@ advancedVersioning.renameOutputApk()
 
 dependencies {
     // YASAN Development Kit
-    implementation 'com.github.yasan-org:ydk-android:1.1.0'
+    implementation 'com.github.yasan-org:ydk-android:1.1.1'
 
     // Misc
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -89,7 +89,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation 'androidx.activity:activity-compose:1.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     implementation "androidx.navigation:navigation-compose:$lifecycle_version"
 
@@ -125,14 +125,14 @@ dependencies {
     implementation("io.coil-kt:coil-compose:$coil_version")
 
     // Persian Date
-    implementation 'com.github.samanzamani:PersianDate:1.3.4'
+    implementation 'com.github.samanzamani:PersianDate:1.5.4'
 
     // Local Unit Tests
     implementation "androidx.test:core:1.4.0"
     testImplementation "junit:junit:$junit_version"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "org.robolectric:robolectric:4.7.3"
+    testImplementation 'org.robolectric:robolectric:4.8.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation "com.google.truth:truth:$truth_version"
     testImplementation "org.mockito:mockito-core:$mockito_version"
