--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,9 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/
-# Android Studio 3 in .gitignore file.
-.idea/caches
-.idea/modules.xml
-# Comment next line if keeping position of elements in Navigation Editor is relevant for you
-.idea/navEditor.xml
+.idea/**/*.xml
+.idea/dictionaries
+.idea/libraries
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
