--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,6 +14,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Setup Java
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
         
       - name: Run detekt
         run: ./gradlew detekt
@@ -22,18 +31,10 @@ jobs:
         if: success() || failure()
         run: cat ./app/build/reports/detekt/detekt.md >> $GITHUB_STEP_SUMMARY
 
-      - name: Push Detekt autocorrect 
-        if: failure() && github.event_name != 'pull_request'
-        run: |
-          git remote set-url origin git@github.com:yasan-org/tehro-android.git
-          git add .
-          git commit -m "Detekt auto correct"
-          git push origin 
-
   unit_tests:
     name: "Tests"
     needs: [ detekt ]
-    runs-on: [ubuntu-latest]
+    runs-on: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v2
 
