--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,7 +2,7 @@ name: Android CI
 
 on:
   push:
-    branches: [ main, telemetry ]
+    branches: [ main ]
   pull_request:
   workflow_dispatch:
 
@@ -10,7 +10,7 @@ jobs:
 
   detekt:
     name: "Detekt"
-    runs-on: [ self-hosted ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -32,9 +32,7 @@ jobs:
         run: cat ./app/build/reports/detekt/detekt.md >> $GITHUB_STEP_SUMMARY
 
   unit_tests:
-    name: "Tests"
-    needs: [ detekt ]
-    runs-on: [ ubuntu-latest ]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -55,14 +53,11 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
       - name: Unit tests
         run: ./gradlew test
 
   android_tests:
-    name: "Instrumented Tests"
-    needs: [ detekt ]
-    runs-on: [ macos-latest ]
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -83,7 +78,6 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -114,7 +108,6 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
       - name: Generate APK
         run: ./gradlew assembleDebug
 
