--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,10 +12,8 @@ jobs:
     name: "Detekt"
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Setup Java
       - uses: actions/setup-java@v2
         with:
           distribution: temurin
@@ -24,7 +22,17 @@ jobs:
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
-      - name: Run detekt
+      - name: Cache Gradle and Wrapper
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+            
+      - name: Unit tests
         run: ./gradlew detekt
 
       - name: Add Detekt report
@@ -53,6 +61,7 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+
       - name: Unit tests
         run: ./gradlew test
 
