--- a/.github/workflows/git-guardian.yml
+++ b/.github/workflows/git-guardian.yml
@@ -1,6 +1,8 @@
 name: GitGuardian scan
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
 
 jobs:
   scanning:
@@ -10,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0 # fetch all history so multiple commits can be scanned
+          fetch-depth: 0
       - name: GitGuardian scan
         uses: GitGuardian/ggshield-action@master
         env:
