--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,119 +8,80 @@ on:
 
 jobs:
 
-  detekt:
-    name: "Detekt"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-java@v2
-        with:
-          distribution: temurin
-          java-version: 11
-
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
-
-      - name: Cache Gradle and Wrapper
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-            
-      - name: Unit tests
-        run: ./gradlew detekt
-
-      - name: Add Detekt report
-        if: success() || failure()
-        run: cat ./app/build/reports/detekt/detekt.md >> $GITHUB_STEP_SUMMARY
-
   unit_tests:
-    needs: [ detekt ]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v2
+      - name: Run Unit tests
+        uses: gradle/gradle-build-action@v2
         with:
-          distribution: temurin
-          java-version: 11
+          gradle-version: current
+          arguments: test
 
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
-
-      - name: Cache Gradle and Wrapper
-        uses: actions/cache@v2
+      - name: Unit tests report
+        uses: dorny/test-reporter@v1
+        if: always()
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Unit tests
-        run: ./gradlew test
+            name: JUnit Test Report
+            path: ./*/build/test-results/*/TEST-*.xml
+            reporter: java-junit
+            fail-on-error: true
 
   android_tests:
-    needs: [ detekt ]
     runs-on: macos-latest
+    strategy:
+      matrix:
+        api-level: [21, 26, 32]
+        target: [default, google_apis]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v2
-        with:
-          distribution: temurin
-          java-version: 11
-
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
-
-      - name: Cache Gradle and Wrapper
-        uses: actions/cache@v2
+      - name: Gradle cache
+        uses: gradle/gradle-build-action@v2
+        
+      - name: AVD cache
+        uses: actions/cache@v3
+        id: avd-cache
         with:
           path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Instrumentation Tests
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-${{ matrix.api-level }}
+
+      - name: Create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
-          script: ./gradlew connectedAndroidTest
+          api-level: ${{ matrix.api-level }}
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
+
+      - name: Run Android tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api-level }}
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
+          script: ./gradlew cAT
 
   assemble_debug:
     needs: [ unit_tests, android_tests ]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v2
+      - name: Run Unit tests
+        uses: gradle/gradle-build-action@v2
         with:
-          distribution: temurin
-          java-version: 11
-
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
-
-      - name: Cache Gradle and Wrapper
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Generate APK
-        run: ./gradlew assembleDebug
+          gradle-version: current
+          arguments: assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v3.1.0
