--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.activity:activity-compose:1.6.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    implementation "androidx.navigation:navigation-compose:$lifecycle_version"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // Compose Material
     implementation "androidx.compose.material:material:$compose_material_version"
